--- a/app/src/main/res/layout/alltransaction_itemview.xml
+++ b/app/src/main/res/layout/alltransaction_itemview.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -10,7 +11,8 @@
         android:elevation="@dimen/marign10dp"
         app:cardElevation="@dimen/marign10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        tools:targetApi="lollipop">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
